일단 깃허브에 올려두고 클로드로 잡아버리기.